--- a/B.html
+++ b/B.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-<head><meta charset="UTF-8"><title>使用者 B 偏好填答</title>
+<head><meta charset="UTF-8"><title>配對伴侶 性行為偏好填答</title>
   <style>
     body { font-family: Arial; padding:20px }
     .slider-container { margin-bottom:20px; }
@@ -8,7 +8,7 @@
   </style>
 </head>
 <body>
-  <h2>使用者 B 填答</h2>
+  <h2>配對伴侶填答</h2>
   <p id="loading">載入中...</p>
   <form id="formB" style="display:none;">
     <div id="questions"></div>
