--- a/index.html
+++ b/index.html
@@ -21,38 +21,7 @@
   <form id="preferenceForm">
     <input type="hidden" name="role" id="role" value="A" />
     <input type="hidden" name="token" id="token" />
-<script>
-  document.getElementById("preferenceForm").addEventListener("submit", async function(e) {
-    e.preventDefault();
-    console.log("[Debug] 表單送出事件觸發");
 
-    const formData = new FormData(e.target);
-    const obj = Object.fromEntries(formData.entries());
-    console.log("[Debug] 表單資料如下：", obj);
-
-    try {
-     const query = new URLSearchParams(obj).toString();
-const response = await fetch(`https://script.google.com/macros/s/AKfycbxFrvyCHynoY--G16UNa7zfpSwDhBEgWFBwpgcAiZAMi_CcgUw1pRpHdLFx_cx1UIzi/exec?${query}`);
-const text = await response.text();
-console.log("[Debug] GAS 回應內容：", text);
-
-     try {
-        const result = JSON.parse(text);
-        if (result.similarity !== undefined) {
-          showChart(result.similarity);
-        }
-        alert(result.message || "已提交！");
-      } catch (parseError) {
-        console.error("[Debug] JSON 解析失敗：", parseError);
-        alert("提交成功，但無法解析回應。");
-      }
-
-    } catch (err) {
-      console.error("[Debug] 傳送失敗：", err);
-      alert("送出失敗，請稍後再試或檢查網路連線。");
-    }
-  });
-</script>
     <script>
       const items = [
         "親吻(輕吻、無唾液交換)",
@@ -146,26 +115,30 @@ console.log("[Debug] GAS 回應內容：", text);
       document.getElementById('token').value = token;
       document.getElementById('role').value = 'B';
       document.getElementById('emailField').style.display = 'none';
+    } else {
+      const generated = Math.random().toString(36).slice(2, 10);
+      document.getElementById('token').value = generated;
     }
 
     document.getElementById("preferenceForm").addEventListener("submit", async function(e) {
       e.preventDefault();
+      console.log("[Debug] 表單送出觸發");
       const formData = new FormData(e.target);
       const obj = Object.fromEntries(formData.entries());
-
-        const query = new URLSearchParams(obj).toString();
-const response = await fetch(`https://script.google.com/macros/s/AKfycbxFrvyCHynoY--G16UNa7zfpSwDhBEgWFBwpgcAiZAMi_CcgUw1pRpHdLFx_cx1UIzi/exec?${query}`);
-const text = await response.text();
-console.log("[Debug] GAS 回應內容：", text);
+      const query = new URLSearchParams(obj).toString();
 
       try {
-        const result = await response.json();
+        const response = await fetch(`https://script.google.com/macros/s/AKfycbx2kl3uiOb546rLKxg6wYuv_SQ8y65DAWhGCllilLReYeMTJPGkjXsivd_UJA-YXUVA/exec?${query}`);
+        const text = await response.text();
+        console.log("[Debug] 回傳內容：", text);
+        const result = JSON.parse(text);
         if (result.similarity !== undefined) {
           showChart(result.similarity);
         }
         alert(result.message);
       } catch (err) {
-        alert("提交成功，請等待對方填寫問卷。");
+        console.error("[Debug] 發生錯誤：", err);
+        alert("提交失敗，請檢查網路或稍後再試。");
       }
     });
 
